--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ os: osx
 language: objective-c
 osx_image: xcode9
 script:
-    - xcodebuild test -project Reactive.xcodeproj -scheme Tests -destination 'platform=iOS Simulator,name=iPhone 6,OS=11.0'
+    - xcodebuild test -project Reactive.xcodeproj -scheme Tests -destination 'platform=iOS Simulator,name=iPhone 6,OS=11.0' | xcpretty
